@@ -8,6 +8,8 @@ Version 0.9.33dev (?? July 01)
   - Fixed bug: User who logged in to the 0.9.31 version would have a
     session cookie that would generate a "Error getting user" message.
     Now redirects them back to the login page.
+  - Fixed bug: don't display access, priority and participants in email
+    reminders if they've been disabled in config.inc
   - Added missing user-ldap.inc to the distribution.
 Version 0.9.32 (26 July 01)
   - Fixed some of the login/session code.  After examining the code, I'm
